manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cms-web-__CI_ENVIRONMENT_SLUG__
  namespace: linebiz-cms
  labels:
    app: cms-web
    ref: __CI_ENVIRONMENT_SLUG__
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: cms-web-port
      protocol: TCP
  selector:
    app: cms-web
    ref: __CI_ENVIRONMENT_SLUG__
